[package]
name = "tailscale-top"
version = "0.1.0"
edition = "2024"
description = "TUI for monitoring Tailscale network traffic in real-time"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
chrono = "0.4"
